chore: add Ink UI dependencies and configure JSX support
Add ink, react, ink-select-input, ink-text-input, ink-spinner and
@types/react. Enable react-jsx in tsconfig.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "noEmit": true,
 
     // Best practices
