--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@agentclientprotocol/sdk": "^0.14.1",
+    "@zed-industries/codex-acp": "^0.9.3",
     "ink": "^6.7.0",
     "ink-select-input": "^6.2.0",
     "ink-spinner": "^5.0.0",
