feat: update README with installation prerequisites and usage instructions; add shebang to index.ts and update package.json for bin and scripts
Entire-Checkpoint: 8a9df0364045

--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "bin": {
+    "reef": "index.ts"
+  },
+  "scripts": {
+    "dev": "bun run index.ts",
+    "build": "bun link"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/react": "^19.2.14",
